--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div id="free-lance">
 				<h3>Free-lancing</h3>
 				<p>
-					asdasouihdauishdauish
+					Teaching English as a second Language online, with my own methodology, focused on developing conversation skills.
 				</p>
 			</div>
 
