--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<nav>
 		<ul>
 			<li>
-				<a href="#about">
-					About
+				<a href="#contact">
+					Contact
 				</a>
 			</li>
 
@@ -37,15 +37,21 @@
 			</h1>
 
 			<p>
-				I'm a front-end developer and English teacher.
+				 I am an English as Second Language teacher, translator and Computer Science major. I'm a front-end developer improving my skills in HTML, CSS and Javascript. 
 			</p>
 		</div>
 
 		<div id="teaching">
+			<div class="teaching-title">
+				<h1>TEACHING</h1>
+				<p>English as Second Language</p>
+			</div>
+			
+
 
 			<div id="get">
 				<h3>Get It</h3>
-				<p1>
+				<p>
 					Teaching Englis as a second Language for children and adults.
 					Experience with the Callan Method.
 					Production and printing of lesson material and books.
@@ -56,7 +62,7 @@
 					Translation of academic papers, advertisements and scripts.
 					Planning and execution of conversation focused classes and assistance classes for students with learning disabilities.
 
-				</p1>
+				</p>
 			</div>
 
 
@@ -64,28 +70,22 @@
 				<h3>
 					KNN
 				</h3>
-				<p1>
+
+				<p>
 					<li>
-						Teaching Englis as a second Language for children and adults.
+						Teaching English as a second Language for children and adults.
 					</li>
 					<li>
 						Working with KNN's own methodology of learning through dialogue.
 					</li>
-				</p1>
-
-			</div>
-			<div id="free-lance">
-				<h3>Free-lancing</h3>
-				<p>
-					Teaching English as a second Language online, with my own methodology, focused on developing conversation skills.
 				</p>
-			</div>
 
+			</div>
 		</div>
 
 		<div id="translation">
 			<div class="projects-translation">
-				<p>Projects</p>
+				<h1>Projects</h1>
 			</div>
 		</div>
 
@@ -93,6 +93,26 @@
 	</content>
 
 	<footer>
+		<div id="contact">
+			<ul>
+				<li>
+					<a href="https://github.com/">
+						GitHub
+					</a>
+				</li>
+
+					<a href="https://www.linkedin.com/in/jos%C3%A9-luis-b-donin-a78b10196/">
+						Linkdin
+					</a>
+				<li>
+					<a href="https://stackoverflow.com/users/16545442/donin/">
+						Stack Overflow
+					</a>
+				</li>
+
+			</ul>
+
+		</div>
 		
 	</footer>
 
