--- a/index.html
+++ b/index.html
@@ -2,119 +2,24 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Portofilio</title>
-
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<title>Joe's CV</title>
 </head>
 <body>
-	<nav>
-		<ul>
-			<li>
-				<a href="#contact">
-					Contact
-				</a>
-			</li>
-
-
-			<li>
-				<a href="#teaching">
-					Teaching
-				</a>
-			</li>
-			<li>
-				<a href="#translation">
-					Translation
-				</a>
-			</li>
-		</ul>
-	</nav>
+	<header>
+		0
+		<nav>
+		1
+		</nav>
+	</header>
 
 	<content>
-
-		<div id="about">
-			<h1>
-				ABOUT
-			</h1>
-
-			<p>
-				 I am an English as Second Language teacher, translator and Computer Science major. I'm a front-end developer improving my skills in HTML, CSS and Javascript. 
-			</p>
-		</div>
-
-		<div id="teaching">
-			<div class="teaching-title">
-				<h1>TEACHING</h1>
-				<p>English as Second Language</p>
-			</div>
-			
-
-
-			<div id="get">
-				<h3>Get It</h3>
-				<p>
-					Teaching Englis as a second Language for children and adults.
-					Experience with the Callan Method.
-					Production and printing of lesson material and books.
-					Proof-reading texts, textbooks and academic papers.
-					Grading and assessment level  of fluency. 
-					Recording, editing and writing  videos with premiere pro for marketing material.
-					Assistance to the development of methodology.
-					Translation of academic papers, advertisements and scripts.
-					Planning and execution of conversation focused classes and assistance classes for students with learning disabilities.
-
-				</p>
-			</div>
-
-
-			<div id="knn">
-				<h3>
-					KNN
-				</h3>
-
-				<p>
-					<li>
-						Teaching English as a second Language for children and adults.
-					</li>
-					<li>
-						Working with KNN's own methodology of learning through dialogue.
-					</li>
-				</p>
-
-			</div>
-		</div>
-
-		<div id="translation">
-			<div class="projects-translation">
-				<h1>Projects</h1>
-			</div>
-		</div>
-
-
+		2
 	</content>
 
 	<footer>
-		<div id="contact">
-			<ul>
-				<li>
-					<a href="https://github.com/">
-						GitHub
-					</a>
-				</li>
-
-					<a href="https://www.linkedin.com/in/jos%C3%A9-luis-b-donin-a78b10196/">
-						Linkdin
-					</a>
-				<li>
-					<a href="https://stackoverflow.com/users/16545442/donin/">
-						Stack Overflow
-					</a>
-				</li>
-
-			</ul>
-
-		</div>
-		
+		3
 	</footer>
-
 </body>
 </html>
