--- a/index.html
+++ b/index.html
@@ -3,23 +3,62 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<title>Joe's CV</title>
 </head>
+
 <body>
 	<header>
 		0
 		<nav>
-		1
+			<div class="container-nav-bar">
+				<ul>
+					<li>
+						<a href="#main-content">
+							Content
+						</a>
+					</li>
+
+					<li>
+						<a href="#contact-info">
+							Contact Links
+						</a>
+					</li>
+
+
+				</ul>
+			</div>
 		</nav>
 	</header>
 
 	<content>
-		2
+
+		<div id="main-content">
+
+			
+			<div class="teaching">
+				<h1>Teaching</h1>
+				
+				<div class="teaching-get-it">
+					<h2>
+						Get It
+					</h2>
+				</div>
+
+				<div class="teaching-knn">
+					<h2>
+						knn
+					</h2>
+			</div>
+		</div>
+			
+		</div>
+
 	</content>
 
 	<footer>
-		3
+		<div id="contact-info">
 	</footer>
+
 </body>
 </html>
