--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta charset="utf-8">
 	    <link rel="stylesheet" type="text/css" href="style.css">
-        <title>Cv</title>
+        <title>José Luís B. Donin</title>
     </head>
 
     <body>
@@ -43,7 +43,7 @@
               
                 <div class="about">
                   <h1>About</h1>
-                  <p>I'm Joe, a teacher and web-developer, welcome to my portfolio.</p>
+                  <p>I'm José, a teacher and web-developer, welcome to my portfolio.</p>
                 </div>
                 
                 <div class="translating">
