--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>
 		Joe's CV
 	</title>
+	 <link rel="shortcut icon" href="profile-removebg-preview.png" type="image/x-icon">
     </head>
 
 
