--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8">
 	    <link rel="stylesheet" type="text/css" href="style.css">
         <title>
-		Joe's CV
+		José Luis B. Donin
 	</title>
 	 <link rel="shortcut icon" href="profile-removebg-preview.png" type="image/x-icon">
     </head>
