--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                       
                 
                   <p>
-                    I am an English as second language teacher and translator transitioning to Computer Science.
-                    My goal is to become a full-stack developer. </p>
+                    I am a Front-end Web Dev. working with HTML/CSS. 
+		  </p>
                 </div>
 
 
