--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <div class="about">
 
                     <h1>ABOUT</h1>
+                    <img src="image-removebg-preview.png">
                     <p>
                     My name is José Luis B. Donin and I'm a Front-end Web Dev. working with HTML/CSS. 
 		            </p>
