--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 
 
-                <div class="teaching">
-                    <h1>Teaching</h1>
+                <!-- <div class="teaching"> -->
+                    <!-- <h1>Teaching</h1> -->
                     
                     <div class="get-it">
                         <a href="http://getit.school/"><img src="Get-it-logo-branco.png"></a>
@@ -156,7 +156,7 @@
 
                             </li>
                         </ol>
-                    </div>
+                    <!-- </div> -->
                 </div>
 
             </main>
