--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 
                 <h1>ABOUT</h1>
                 <img src="image-removebg-preview.png">
-                <p>
-                    My name is José Luis B. Donin and I'm a Front-end Web Dev. working with HTML/CSS. 
-		        </p>
+                <p>My name is José Luis B. Donin and I'm a Front-end Web Dev. working with HTML/CSS. </p>
 
             </div>
-                
+
             <div class="schedule-app">
                 <h1>Schedule App </h1>
                 <img src="Screenshot.png">
