changed some classes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
 	    <meta charset="utf-8">
-	    <link rel="stylesheet" type="text/css" href="style.css">
+	    <link rel="stylesheet" type="text/css" href="styles.css">
         <title>José Luis B. Donin</title>
 	    <link rel="shortcut icon" href="profile-removebg-preview.png" type="image/x-icon">
     </head>
@@ -10,7 +10,7 @@
     
         <main>
               
-            <div class="about">
+            <div id="about">
 
                 <h1>ABOUT</h1>
                 <img src="image-removebg-preview.png">
