--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             
             <div class="PTI">
                 <a href="https://cibiogas.org/"> <img src="cibiogas.png"></a>
-                <p>  International Center for Renewable Energy (CIBiogás)</p>
+                <h1> International Center for Renewable Energy (CIBiogás)</h1>
                 <ol>
                     <li>Internship at the Dept. of International Affairs.</li>
                     <li>Integration with projects from Itaipu Binacional and Itaipu Technology Park.</li>
@@ -48,7 +48,7 @@
 
             <div class="get-it">
                 <a href="http://getit.school/"><img src="Get-it-logo-branco.png"></a>
-                <p>English teacher</p>     
+                <h1>English teacher</h1>     
                 <ol>
                     <li>Teaching ESL for children and adults.</li>
                     <li>Experience with the Callan Method.</li>   
@@ -64,7 +64,7 @@
 
             <div class="KNN">
                 <a href="https://www.knnidiomas.com.br/"><img src="Logo-Marca-KNN-Idiomas-removebg-preview.png"></a>
-                <p>English teacher</p>    
+                <h1>English teacher</h1>     
                 <ol>
                     <li>Teaching ESL for children and adults.</li>
                     <li>Working with KNN's own methodology.</li>
