--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <li><a href="https://www.linkedin.com/in/jos%C3%A9-luis-b-donin-a78b10196/"> <img src="link.png"></a></li>
                 <li><a href="https://github.com/Jose-Donin"><img src="git.png"></a></li>
                 <li> <a href=https://stackoverflow.com/users/16545442/donin><img src="stack.png"></a></li>
+                <li><a href=https://www.youtube.com/channel/UCc4kGNr8H4FCOpCUN2ymuPQ><img src="yt.png"></a></li>
             </ol>
         </nav>
 
