--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
                 <h1>ABOUT</h1>
                 <img src="image-removebg-preview.png">
-                <p>My name is José Luis B. Donin and I'm a HTML/CSS/Javascript developer. </p>
+                <p>My name is José Luis B. Donin and I'm an HTML/CSS/Javascript developer. </p>
 
             </div>
 
