--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="about">
             <h1>José Luis B. Donin</h1>
             <img src="profile pic.png">
-            <h2>HTML/CSS/Js </h2>
+            <h2>HTML CSS JS </h2>
 
         </div>
 
