--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="https://stackoverflow.com/users/16545442/donin"><img src="img/stack-overflow.png" alt="stack-overflow"></a>
                 </li>
                 <li>
-                   <a href="https://github.com/Jose-Donin"> <img src="img/github.png" alt="github"></a>
+                   <a href="https://github.com/luisdonin"> <img src="img/github.png" alt="github"></a>
 
                 </li>
                 <li>
