--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="about-image">
             <img src="img/pro.png" alt="profile">
             <h1>José L. B. Donin</h1>
-            <h2>Frontend Developer</h2>
+            <h2>Computer Engineering Student at UTFPR - Toledo.</h2>
         </div>
         <div class="contact-links">
 
