--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div id="job-content">
                  <p>
-                    Internship at the Dept. of International Affairs, cooperating with Itaipu Binacional and Itaipu Technology Park. Translation from English to portuguese of documents, contracts, e-mails, invitations and itineraries. Organizing national and international business meetings Planning of trips, booking of hotels, purchase of tickets. 
+                    During my internship with the Department of International Affairs, I had the opportunity to collaborate with Itaipu Binacional and Itaipu Technology Park. As part of my responsibilities, I was tasked with translating various documents, contracts, e-mails, invitations, and itineraries from English to Portuguese. Additionally, I assisted in organizing national and international business meetings, as well as planning and coordinating travel arrangements such as booking hotels and purchasing tickets.
                 </p>
             </div>
            
