--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles.css">
+
     <title>José Luis B. Donin</title>
 </head>
 <body>
@@ -34,10 +35,10 @@
     </div>
     <section>
         <div class="pti">
-            <div id="logo">
-                <a href="http://"><img src="img/cibiogas.png" alt="" srcset=""></a>
+            <div class="logo">
+                <a href="https://cibiogas.org/"><img src="img/cibiogas.png" alt="" srcset=""></a>
             </div>
-            <div id="job-content">
+            <div class="job-content">
                  <p>
                     During my internship with the Department of International Affairs, I had the opportunity to collaborate with Itaipu Binacional and Itaipu Technology Park. As part of my responsibilities, I was tasked with translating various documents, contracts, e-mails, invitations, and itineraries from English to Portuguese. Additionally, I assisted in organizing national and international business meetings, as well as planning and coordinating travel arrangements such as booking hotels and purchasing tickets.
                 </p>
@@ -47,16 +48,15 @@
 
 
         <div class="knn">
-            <div id="logo">
-                <a href="http://"><img src="img/knn .png" alt="" srcset=""></a>
+            <div class="logo">
+                <a href="https://www.knnidiomas.com.br/"><img src="img/knn .png" alt="" srcset=""></a>
             </div>
-            <div id="job-content">
+            <div class="job-content">
                 <p>
-                    Teaching ESL for children and adults. Working with KNN's own methodology. Focused on conversation lessons.
-
-                    Writing scripts for educational material on Instagram and TikTok.
-
-                    Editing videos on Premiere Pro for Instagram and TikTok. 
+                    My professional experience involves instructing English as a Second Language (ESL) to both children
+                    and adults, utilizing KNN's proprietary methodology. I specialize in conversational lessons and am
+                    adept at creating educational content for social media platforms such as Instagram and TikTok, including
+                    the development of scripts and editing of videos using Premiere Pro.
                 </p>
             </div>    
                 
@@ -64,42 +64,26 @@
 
         <div class="get-wise">
 
-            <div id="logo">
-                <a href="http://"><img src="img/getwise.webp" alt="" srcset=""></a>
+            <div class="logo">
+                <a href="https://getit.school/"><img src="img/getwise.webp" alt="" srcset=""></a>
             </div>
 
-            <div id="job-content">
+            <div class="job-content">
                 <p>
-                    Teaching ESL for children and adults.
-
-                    Experience with the Callan Method.
-
-                    Production and printing of lesson material and books.
-
-                    Proof-reading texts, textbooks and academic papers.
-
-                    Grading and assessment level of fluency.
-
-                    Recording, editing and writing videos with premiere pro for marketing material.
-
-                    Assistance to the development of methodology.
-
-                    Translation of academic papers, advertisements and scripts.
-
-                    Planning and execution of conversation focused classes and assistance classes for students with learning disabilities.
+                    I have experience teaching ESL to both children and adults and am familiar with the Callan Method. I have assisted in creating lesson materials and proofreading texts, textbooks, and academic papers. I also grade fluency levels and create marketing videos using Premiere Pro. Additionally, I have provided translation services and executed conversation classes and assisted students with learning disabilities.
                 </p>
             </div>
         </div>
 
         <div class="translation">
-            <div id="logo">
+            <div class="logo">
                 <H1>
                     <img src="img/language.png" alt="" srcset="">
                     Translation
                 </H1>
             </div>
 
-            <div id="job-content">
+            <div class="job-content">
 
                 <p>  Research on Pedagogic Methods - Unioste - Letras Português e Alemão. (PT-BR - EN-US)</p>
 
@@ -107,6 +91,99 @@
 
                 <p>    Technology parks internationalization: A case study at the Itaipu Technology Park (PTI-BR)(PT-BR - EN-US).</p>
                 
+            </div>
+        </div>
+        <div class="translation">
+            <div class="logo">
+                <H1>
+                    <img src="img/youtube.png" alt="" srcset="">
+                    Videos
+                </H1>
+            </div>
+
+            <div class="job-content">
+               <div class="video-container">
+                   <div class="video-player">
+                        <h2>Smarty Pants</h2>
+                        <video controls>
+                            <source src="videos/2.mp4" type="video/mp4">
+                        </video>
+                   </div>
+
+                   <div class="video-player">
+                        <h2>Bet Ya!</h2>
+                        <video controls>
+                            <source src="videos/3.mp4" type="video/mp4">
+                        </video>
+                   </div>
+
+                   <div class="video-player">
+                       <h2>A.K.A </h2>
+                       <video controls>
+                           <source src="videos/4.mp4" type="video/mp4">
+                       </video>
+                   </div>
+
+                   <div class="video-player">
+                       <h2>Outta Here!</h2>
+                       <video controls>
+                           <source src="videos/5.mp4" type="video/mp4">
+                       </video>
+                   </div>
+                   <div class="video-player">
+                       <h2>Wake Up!</h2>
+                       <video controls>
+                           <source src="videos/6.mp4" type="video/mp4">
+                       </video>
+                   </div>
+                   <div class="video-player">
+                       <h2>Eat a Horse!</h2>
+                       <video controls>
+                           <source src="videos/7.mp4" type="video/mp4">
+                       </video>
+                   </div>
+                   <div class="video-player">
+                       <h2>Hot under the collar!</h2>
+                       <video controls>
+                           <source src="videos/8.mp4" type="video/mp4">
+                       </video>
+                   </div>
+                   <div class="video-player">
+                       <h2>Long time no see!</h2>
+                       <video controls>
+                           <source src="videos/9.mp4" type="video/mp4">
+                       </video>
+                   </div>
+                   <div class="video-player">
+                       <h2>Same page!</h2>
+                       <video controls>
+                           <source src="videos/1.mp4" type="video/mp4">
+                       </video>
+                   </div>
+                   <div class="video-player">
+                       <h2>I  miss you!</h2>
+                       <video controls>
+                           <source src="videos/EDITADO.mp4" type="video/mp4">
+                       </video>
+                   </div>
+                   <div class="video-player">
+                       <h2>Subtitles!</h2>
+                       <video controls>
+                           <source src="videos/LEGENDADO.mp4" type="video/mp4">
+                       </video>
+                   </div>
+                   <div class="video-player">
+                       <h2>Wrap your head around this!</h2>
+                       <video controls>
+                           <source src="videos/Sequência 03.mp4" type="video/mp4">
+                       </video>
+                   </div>
+
+
+
+                   <script src="script.js"></script>
+               </div>
+
             </div>
         </div>
     </section>
